* Fix security issues

--- a/HCore-Identity-PagesUI-Views/Pages/Account/ForgotPassword.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/ForgotPassword.cshtml
@@ -1,12 +1,21 @@
 ﻿@page
+@using reCAPTCHA.AspNetCore
+@using System.Threading
 @model ForgotPasswordModel
 @{
     ViewData["Title"] = Messages.forgot_password_title;
 }
 
+<style>
+    .g-recaptcha {
+        padding-top: 0px;
+        padding-bottom: 25px;
+    }
+</style>
+
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <form method="post">            
+        <form method="post">
             <h4>@Messages.forgot_password_header</h4>
             <p>@Messages.forgot_password_header_text</p>
             <hr />
@@ -15,6 +24,12 @@
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
             </div>
+
+            @if (Model.Recaptcha != null)
+            {
+                @Html.Recaptcha(Model.Recaptcha, language: Thread.CurrentThread.CurrentUICulture.TwoLetterISOLanguageName);
+            }
+
             <button type="submit" class="btn btn-default">@Messages.button_submit</button>
         </form>
     </div>
